# welltory-task

./: .env.example  .gitignore  ANSWERS.md  Dockerfile  LICENSE  Makefile  README.md  bandit.yaml  conftest.py  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: api.py  tasks.py
app/core/: config.py  dependencies.py  errors.py
common/: config.py
common/enums/: task.py
common/interfaces/: task.py
common/models/: base.py  task.py
common/services/: redis.py  tasks.py
scripts/: deploy.sh  run.sh  test.sh
tests/app/: fixtures.py  test_api.py
tests/app/fixtures/: common.py  tasks.py
tests/common/: fixtures.py
tests/worker/: fixtures.py  test_worker.py
worker/: main.py  task_worker.py
worker/interfaces/: worker.py
