[tool.poetry]
name = "welltory-task"
version = "0.1.0"
description = "Tasks for Welltory"
authors = ["The Alchemist <at.thealchemist@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.1"
uvicorn = "^0.11.1"
pydantic = { version = "^1.3", extras = ["dotenv"] }
requests = "^2.22.0"
loguru = "^0.4.0"
joblib = "^0.15.1"
aioredis = "^2.0.0"
aiologger = "^0.6.1"
pytest-asyncio = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "^19.10b0", allow-prereleases = true }
autopep8 = "^1.4.4"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
